Update preview with merchant-documentation-gateway/cleanup

--- a/content/index.adoc
+++ b/content/index.adoc
@@ -46,6 +46,8 @@ include::index/integration-options/ppv2/ppv2-features/03-01-06-05-max-retries.ad
 include::index/integration-options/ppv2/ppv2-features/03-01-06-06-auto-sale.adoc[leveloffset=+4]
 include::index/integration-options/ppv2/ppv2-features/03-01-06-07-my-favorite-payment.adoc[leveloffset=+4]
 include::index/integration-options/ppv2/ppv2-features/03-01-06-08-customized-display-text.adoc[leveloffset=+4]
+include::index/integration-options/ppv2/ppv2-features/pm-filter-order.adoc[leveloffset=+4]
+include::index/integration-options/ppv2/ppv2-features/cc-limit-card-brands.adoc[leveloffset=+4]
 include::index/integration-options/ppv2/pp-designer/03-01-07-payment-page-designer.adoc[leveloffset=+3]
 include::index/integration-options/ppv2/pp-designer/03-01-07-01-pp-designer-quick-start-guide.adoc[leveloffset=+4]
 include::index/integration-options/ppv2/pp-designer/03-01-07-02-pp-designer-using-themes.adoc[leveloffset=+4]
