--- a/content/index/changelog/00-whats-new.adoc
+++ b/content/index/changelog/00-whats-new.adoc
@@ -5,6 +5,11 @@
 [discrete]
 === 2020-05
 
+.2020-05-13
+- <<BatchProcessingApi_Files_Specifications, Batch Processing Files>> - Updated formatting details in csv files.
+
+//-
+
 .2020-05-06
 - <<3DS2_IntegrationGuide, 3D Secure 2 Integration Guide>> - New 3D Secure 2 Integration Guide available.
 - <<3DS2_Testing, 3D Secure 2 Testing>> - New 3D Secure 2 Testing section available.
@@ -583,6 +588,6 @@ codes in example for REST API.
 //-
 
 .2018-10-20
-- <<PPv2_Features_PaybyLink, Pay by Link>> - Updated documentation for {payment-page-v2}.
+- <<PPv2_Features_PaybyLinkAPI, Pay by Link>> - Updated documentation for {payment-page-v2}.
 
 //-
