--- a/content/index/integration-guides/batch-processing-api/batch-processing-api-integration.adoc
+++ b/content/index/integration-guides/batch-processing-api/batch-processing-api-integration.adoc
@@ -167,23 +167,33 @@ did not receive your credentials.
 Request and response files must meet the following criteria:
 
 - Encrypted with PGP (mandatory for files including _Credit Card_
-transactions)
-- Formatted as ``.csv``
-- This means, only comma (``,``) is accepted as separator!
+transactions).
+- Formatted as ``.csv``.
+- Use comma (``,``) as separator.
 +
-IMPORTANT: A field value *must not* contain a comma!
+IMPORTANT: If a field value contains a comma, you need to wrap the whole field value in double quotation marks (e.g.: value1,“value,2”,value3,”value,4”).
 
 +
 - Linefeed: ``LF`` (Unix format) must be used as separator for the
-different transactions
-- Include header columns for each field
-- Encoded in UTF-8
+different transactions.
+- Include header columns for each field.
+- Encoded in UTF-8.
 - The different parameters must be defined in the order given in the
 table <<BatchProcessingApi_Request_Sepa, Batch Processing SEPA>>.
 
 //-
 
-Please refer to the <<BatchProcessingApi_Sample, Sample>> for Batch Processing.
+.CSV file with comma in field value
+
+Here is an excerpt of a csv example to illustrate the use of a comma in a field value.
+
+[source,csv,subs=attributes+]
+----
+include::{root}/samples/csv/batch-process_comma-value.csv[]
+----
+<1> The field value for ``order_detail`` is enclosed in double quotation marks because it contains a comma.
+
+Look at our <<BatchProcessingApi_Sample, full Sample>> to see a complete Batch Processing csv file.
 
 [#BatchProcessingApi_Request]
 ===== Request
