--- a/content/index/integration-options/ppv1/03-02-12-payment-solutions.adoc
+++ b/content/index/integration-options/ppv1/03-02-12-payment-solutions.adoc
@@ -1,15 +1,15 @@
 [#PP_PaymentSolutions]
 == Payment Solutions
 
-[#PPv1_PaymentSolutions_PaybyLink]
-=== Pay by Link
+[#PPv1_PaymentSolutions_PaybyLinkAPI]
+=== Pay by Link via API
 
 Merchants can offer payment on Hosted Payment Page (HPP) using a <<PPv1_PaymentSolutions_InvoiceviaEmail, hyperlink from their own newsletter or an email>>.
 The hyperlink redirects the consumer to a credit card
 form within HPP in order to supply consumer's card data. Additionally,
 the merchant can accept MOTO (Mail Order/Telephone Order) payments and
-remain PCI SAQ-A compliant. Pay by Link can also be used with the
-<<PPv2_Features_PaybyLink, {payment-page-v2-abbr}>> integration.
+remain PCI SAQ-A compliant. Pay by Link via API can also be used with the
+<<PPv2_Features_PaybyLinkAPI, {payment-page-v2-abbr}>> integration.
 
 [#PPV1_PaymentSolutions_PaybyLink_Hyperlink]
 ==== Hyperlink Expiration Timestamp
