--- a/content/index/integration-options/ppv2/03-01-01-hosted-payment-page.adoc
+++ b/content/index/integration-options/ppv2/03-01-01-hosted-payment-page.adoc
@@ -6,7 +6,7 @@
 .HPP Advantages
 - Standalone payment page
 - Customization with <<PaymentPageSolutions_PPv2_PaymentPageDesigner, Payment Page Designer>>
-- <<PPv2_Features_PaybyLink, Expiration times>> for HPP payment hyperlinks
+- <<PPv2_Features_PaybyLinkAPI, Expiration times>> for HPP payment hyperlinks
 - PCI DSS SAQ A
 
 //-
@@ -21,7 +21,7 @@ more for a cohesive look that meets your preferences and fits your
 merchant branding. The redirect to the HPP will be barely noticeable,
 which makes consumers feel at ease.
 
-HPP also allows you to configure <<PPv2_Features_PaybyLink, expiration times>> for payment hyperlinks:
+HPP also allows you to configure <<PPv2_Features_PaybyLinkAPI, expiration times>> for payment hyperlinks:
 payments can be postponed.
 
 {payment-provider-name} hosts all sensitive data - you only need to meet the
