--- a/content/index/payment-methods/credit-card/rest/11-01-03-credit-card_payment-features.adoc
+++ b/content/index/payment-methods/credit-card/rest/11-01-03-credit-card_payment-features.adoc
@@ -364,7 +364,7 @@ digits allocated to dynamic information will be.
          |Location |13
 .2+|Master Card |Name |22
                 |Location |13
-.2+|JBC |Name |25
+.2+|JCB |Name |25
         |Location |13
 |===
 
