--- a/content/index/payment-methods/credit-card/rest/11-01-credit-card.adoc
+++ b/content/index/payment-methods/credit-card/rest/11-01-credit-card.adoc
@@ -123,11 +123,11 @@ image::images/11-01-credit-card/CreditCard-referenced-purchase.png[Credit Card r
 
 [#CreditCard_PaymentSolutions]
 === Payment Solutions
-As payment solutions the {payment-gateway} provides _Pay by Link_ and _Invoice via Email._ They both are currently only used with a Payment Page integration.
+As payment solutions the {payment-gateway} provides _Pay by Link via API_ and _Invoice via Email._ They both are currently only used with a Payment Page integration.
 
 You can find
 
-* _Pay by Link_ at <<PPv1_PaymentSolutions_PaybyLink, {payment-page-v1}>> and <<PPv2_Features_PaybyLink, {payment-page-v2}>>
+* _Pay by Link via API_ at <<PPv1_PaymentSolutions_PaybyLinkAPI, {payment-page-v1}>> and <<PPv2_Features_PaybyLinkAPI, {payment-page-v2}>>
 * _Invoice via Email_ at <<PPv1_PaymentSolutions_InvoiceviaEmail, {payment-page-v1}>>
 
 //-
