--- a/content/index/integration-options/ppv2/ppv2-features/03-01-06-wpp-features.adoc
+++ b/content/index/integration-options/ppv2/ppv2-features/03-01-06-wpp-features.adoc
@@ -12,10 +12,12 @@ Read about individual features by clicking on the respective link below:
 * <<PPv2_Features_OrderOverview, Order Overview>>
 * <<PPv2_Features_CardholderName, Cardholder Name>>
 * <<PPv2_Features_AdditionalFields, Additional Fields>>
-* <<PPv2_Features_PaybyLink, Pay by Link>>
+* <<PPv2_Features_PaybyLinkAPI, Pay by Link via API>>
 * <<PPv2_Features_MaxRetries, Max Retries>>
 * <<PPv2_Features_AutoSale, Auto-Sale>>
 * <<PPv2_Features_MyFavoritePayment, My Favorite Payment>>
 * <<PPv2_CustomizedDisplayText, Customized Display Text>>
+* <<PPv2_Features_OrderFilter, Order and Filter Payment Methods>>
+* <<PPv2_Features_LimitCardBrands, Limit Credit Card Brands>>
 
 //-
