Update preview with merchant-documentation-gateway/cleanup

--- a/content/index/integration-options/ppv1/03-02-01-01-pp-hosted-payment-page-workflow.adoc
+++ b/content/index/integration-options/ppv1/03-02-01-01-pp-hosted-payment-page-workflow.adoc
@@ -10,29 +10,7 @@ re-direct to a provider.
 
 .Hosted Payment Page: Credit card payment flow
 [HPP Workflow]
-[mermaid,PP_HPP_Workflow,svg,subs=attributes+]
-----
-sequenceDiagram
-    participant A as Consumer
-    participant B as Merchants System
-    participant C as Hosted Payment Page
-    participant D as _{payment-gateway}_
-    participant E as Financial Institution
-        A ->> B: 1. checks out
-        B ->> C: 2. redirects to HPP URL
-        D -->> D: 3.a validates signature
-	      D ->> C: 3.b returns list of payment methods
-        C ->> A: 4. displays payment methods
-        C ->> D: 5. posts the payment transaction
-        D ->> E: 6. processes payment
-        D ->> C: 7. returns final response
-        C ->> B: 8. posts response ("success"/"failure")
-        opt 1
-        B -->> B: 9. validates signature
-        B -->> B: decodes response
-        end
-        A ->> B: redirected to success or failure page
-----
+image::images/PP_HPP_Workflow.svg[]
 
 . Consumer checks out with the purchased goods/services.
 . Merchant system redirects to the Hosted Payment Page URL with a
