--- a/content/index/payment-methods/enets/ppv1/11-46-enets.adoc
+++ b/content/index/payment-methods/enets/ppv1/11-46-enets.adoc
@@ -53,25 +53,7 @@ which formats can be used for requests and responses.
 [#eNETS_Workflow]
 === Workflow
 
-[mermaid, eNETS_workflow,svg,subs=attributes+]
-----
-sequenceDiagram
-    participant Consumer
-    participant Merchant
-    participant {payment-gateway-abbr}
-    participant eNETS
-Consumer->>Merchant: proceeds to checkout
-Merchant->>{payment-gateway-abbr}: sends payment request
-{payment-gateway-abbr}->>Consumer: asks consumer to select a payment method
-Consumer->>{payment-gateway-abbr}: selects eNETS
-{payment-gateway-abbr}->>Consumer: redirects consumer to eNETS page
-Consumer->>eNETS: selects bank
-eNETS->>Consumer: redirects consumer to bank page
-Consumer->>eNETS: logs in on bank page and completes payment
-eNETS->>{payment-gateway-abbr}: sends transaction status
-{payment-gateway-abbr}->>Merchant: sends notification
-{payment-gateway-abbr}->>Consumer: redirects to status page
-----
+image::images/eNETS_workflow.svg[]
 
 . Consumer adds items to shopping basket and proceeds to checkout.
 . Merchant sends consumer's payment request to {payment-gateway-abbr} for processing.
