--- a/content/index/payment-methods/klarna-payments/rest/11-13-01-03-klarna-v2-void-authorization.adoc
+++ b/content/index/payment-methods/klarna-payments/rest/11-13-01-03-klarna-v2-void-authorization.adoc
@@ -22,25 +22,7 @@ To refer to a specific _authorization_, _adjust-authorization_ or _pending-autho
 [#KlarnaV2_TransactionTypes_voidAuthorization_Workflow]
 ===== _void-authorization_ Workflow
 
-[mermaid,Klarnav2_workflow_voidAuthorization,svg,subs=attributes+]
-----
-sequenceDiagram
-    participant M as Merchant
-    participant W as WPG
-    participant K as Klarna
-M-->>M: cancels order
-M->>W: sends "void-authorization" request
-W->>K: creates "void-authorization" transaction
-W-->>W: capture check
-    alt partial capture before
-        W->>K: releases remaining auth. request
-        K->>W: releases remaining order
-    else no partial capture before
-        W->>K: cancels authorization request
-        K->>W: cancels authorization
-    end
-W->>M: creates/sends response
-----
+image::images/Klarnav2_workflow_voidAuthorization.svg[]
 
 . -> Send a _void-authorization_ request. This request must contain the ``parent-transaction-id``. Enter the ``transaction-id`` of the preceding _authorization_, _adjust-authorization_ or _pending-authorization_ that is to be canceled.
 . _{payment-gateway}_ checks if parts of this order have already been captured:
