--- a/content/index/payment-methods/klarna-payments/rest/11-13-01-04-klarna-v2-capture-authorization.adoc
+++ b/content/index/payment-methods/klarna-payments/rest/11-13-01-04-klarna-v2-capture-authorization.adoc
@@ -27,20 +27,7 @@ _Klarna_ sends *payment instructions* (containing bank account details) per emai
 [#KlarnaV2_TransactionTypes_captureAuthorization_Workflow]
 ===== _capture-authorization_ Workflow
 
-[mermaid,Klarnav2_workflow_captureAuthorization,svg,subs=attributes+]
-----
-sequenceDiagram
-    participant M as Merchant
-    participant W as WPG
-    participant K as Klarna
-M-->>M: activates order
-M->>W: sends "capture-authorization" request
-W->>K: creates and sends "capture-authorization"
-K-->>K: captures order
-K->>W: sends capture response
-W->>M: sends response
-M-->>M: processes response
-----
+image::images/Klarnav2_workflow_captureAuthorization.svg[]
 
 . -> Send an _capture-authorization_ request. This request must contain the ``parent-transaction-id``. Enter the ``transaction-id`` of the preceding _authorization_ or _adjust-authorization_ response.
 
