--- a/content/index/payment-methods/klarna-payments/rest/11-13-01-05-klarna-v2-refund-capture.adoc
+++ b/content/index/payment-methods/klarna-payments/rest/11-13-01-05-klarna-v2-refund-capture.adoc
@@ -23,18 +23,7 @@ To refer to a specific _capture-authorization_, you need the ``parent-transactio
 [#KlarnaV2_TransactionTypes_refundCapture_Workflow]
 ===== _refund-capture_ Workflow
 
-[mermaid,Klarnav2_workflow_refundAuthorization,svg,subs=attributes+]
-----
-sequenceDiagram
-    participant M as Merchant
-    participant W as WPG
-    participant K as Klarna
-M->>W: sends "refund-capture" request
-W->>K: creates "refund-capture" transaction
-K-->>K: processes refund
-K->>W: sends refund result
-W->>M: creates/sends response
-----
+image::images/Klarnav2_workflow_refundAuthorization.svg[]
 
 . -> Send a _refund-capture_ request. This request must contain the ``parent-transaction-id``. Enter the ``transaction-id`` of the preceding _capture-authorization_ response.
 
