--- a/content/index/payment-processing/3-d-secure-2/11-01-09-three-d-secure-two-payment-flows.adoc
+++ b/content/index/payment-processing/3-d-secure-2/11-01-09-three-d-secure-two-payment-flows.adoc
@@ -18,15 +18,7 @@ Card-on-file flagging required: Yes
 [#API_CC_3DS2_PaymentFlows_MIT_FirstPaymentAndSubscription_First]
 ==== First Payment (One-Step) with Authentication - Consumer-Initiated
 
-[mermaid,API_CC_3DS2_PaymentFlows_MIT_FirstPaymentAndSubscription_First,svg]
-----
-graph LR
-A("1. check-enrollment (recurring amount)")-->B
-B["2. ACS URL redirect"]-->C
-C("3. check-payer-response (optional)")-->D
-D("4. purchase (recurring amount)")
-class B squared-rect
-----
+image::images/API_CC_3DS2_PaymentFlows_MIT_FirstPaymentAndSubscription_First.svg[]
 
 . *Check-enrollment*: This is the initial request in a 3D Secure 2 payment flow. It initiates the payment session and checks if the consumer's card is enrolled in the 3D Secure 2 program.
 +
@@ -263,11 +255,7 @@ m| true
 [#API_CC_3DS2_PaymentFlows_MIT_FirstPaymentAndSubscription_Subscription_TwoStep]
 _Option 2: Two-Step Merchant Initiated Transaction (MIT)_
 
-[mermaid,API_CC_3DS2_PaymentFlows_RecurringMIT_StoringCCAndSubscription_TwoStep,svg]
-----
-graph LR
-A("1. authorization (recurring amount)")-->B("2. capture-authorization (recurring amount)")
-----
+image::images/API_CC_3DS2_PaymentFlows_RecurringMIT_StoringCCAndSubscription_TwoStep.svg[]
 
 . *Authorization*: The *authorization* in the transaction flow must reference the initial ``recurring`` transaction. Include the ``transaction-id`` from the _initial_ *purchase* response in the ``parent-transaction-id`` field. Include ``sequence-type`` set to ``recurring`` or ``final``.
 
@@ -339,16 +327,7 @@ Card-on-file flagging required: Yes
 [#API_CC_3DS2_PaymentFlows_RecurringMIT_StoringCCAndSubscription_AuthAndVoid]
 ==== Storing Card Credentials (Reserve and Void Amount) with Authentication
 
-[mermaid,API_CC_3DS2_PaymentFlows_RecurringMIT_StoringCCAndSubscription_AuthAndVoid,svg]
-----
-graph LR
-A("1. check-enrollment (recurring amount)")-->B
-B["2. ACS URL redirect"]-->C
-C("3. check-payer-response (optional)")-->D
-D("4. authorization (recurring amount)")-->E
-E("5. void-authorization (optional)")
-class B squared-rect
-----
+image::images/API_CC_3DS2_PaymentFlows_RecurringMIT_StoringCCAndSubscription_AuthAndVoid.svg[]
 
 . *Check-enrollment*: This is the initial request and initiates
 the payment session. New 3D Secure 2 fields can be found in
@@ -611,11 +590,7 @@ m| true
 [#API_CC_3DS2_PaymentFlows_RecurringMIT_StoringCCAndSubscription_TwoStep]
 ==== Option 2: Two-Step Merchant Initiated Transaction (MIT)
 
-[mermaid,API_CC_3DS2_PaymentFlows_RecurringMIT_StoringCCAndSubscription_TwoStep,svg]
-----
-graph LR
-A("1. authorization (recurring amount)")-->B("2. capture-authorization (recurring amount)")
-----
+image::images/API_CC_3DS2_PaymentFlows_RecurringMIT_StoringCCAndSubscription_TwoStep.svg[]
 
 . *Authorization*: The *authorization* in the transaction flow must reference the initial ``recurring`` transaction. Include the ``transaction-id`` from the _initial_ *authorization* response in the ``parent-transaction-id`` field. Set ``sequence-type`` to ``recurring`` or ``final``.
 
@@ -689,15 +664,7 @@ Card-on-file flagging required: Yes
 
 IMPORTANT: Check-enrollment with installment is currently under development and will be made available with the next update release.
 
-[mermaid,API_CC_3DS2_PaymentFlows_InstallmentMIT_FirstPaymentAndInstallment_FirstCI,svg]
-----
-graph LR
-A("1. check-enrollment (full amount + interest)")-->B
-B["2. ACS URL redirect"]-->C
-C("3. check-payer-response (optional)")-->D
-D("4. purchase (first installment amount)")
-class B squared-rect
-----
+image::images/API_CC_3DS2_PaymentFlows_InstallmentMIT_FirstPaymentAndInstallment_FirstCI.svg[]
 
 . *Check-enrollment*: This is the initial request in a 3D Secure 2 payment flow. It initiates the payment session and checks if the consumer's card is enrolled in the 3D Secure 2 program.
 +
@@ -928,11 +895,7 @@ m| true
 [#API_CC_3DS2_PaymentFlows_InstallmentMIT_SubsequentNoAuth_TwoStep]
 ==== Option 2: Two-Step Merchant Initiated Transaction (MIT)
 
-[mermaid,API_CC_3DS2_PaymentFlows_InstallmentMIT_SubsequentNoAuth_TwoStep,svg]
-----
-graph LR
-A("1. authorization (installment amount)")-->B("2. capture-authorization (installment amount)")
-----
+image::images/API_CC_3DS2_PaymentFlows_InstallmentMIT_SubsequentNoAuth_TwoStep.svg[]
 
 . *Authorization*: The *authorization* in the transaction flow must reference the initial ``installment`` transaction. Include the ``transaction-id`` from the _initial_ *purchase* response in the ``parent-transaction-id`` field. Set ``sequence-type`` to ``recurring`` or ``final``.
 +
@@ -1006,15 +969,7 @@ Card-on-file flagging required: Yes
 [#API_CC_3DS2_PaymentFlows_MITUCOF_FirstAndUnscheduledMIT_FirstPayment]
 ==== First Payment (One-Step) with Authentication - Consumer-Initiated
 
-[mermaid,API_CC_3DS2_PaymentFlows_MITUCOF_FirstAndUnscheduledMIT_FirstPayment,svg]
-----
-graph LR
-A("1. check-enrollment (initial amount)")-->B
-B["2. ACS URL redirect"]-->C
-C("3. check-payer-response (optional)")-->D
-D("4. purchase (initial amount)")
-class B squared-rect
-----
+image::images/API_CC_3DS2_PaymentFlows_MITUCOF_FirstAndUnscheduledMIT_FirstPayment.svg[]
 
 . *Check-enrollment*: This is the initial request in a 3D Secure 2 payment flow. It initiates the payment session and checks if the consumer's card is enrolled in the 3D Secure 2 program.
 +
@@ -1240,11 +1195,7 @@ m| true
 [#API_CC_3DS2_PaymentFlows_MITUCOF_Subsequent_NoAuth_TwoStepMIT]
 ==== Option 2: Two-Step Merchant Initiated Transaction (MIT)
 
-[mermaid,API_CC_3DS2_PaymentFlows_MITUCOF_Subsequent_NoAuth_TwoStepMIT,svg]
-----
-graph LR
-A("1. authorization (UCOF amount)")-->B("2. capture-authorization (UCOF amount)")
-----
+image::images/API_CC_3DS2_PaymentFlows_MITUCOF_Subsequent_NoAuth_TwoStepMIT.svg[]
 
 . *Authorization*: The *authorization* in the transaction flow must reference the initial ``ucof`` transaction. Include the ``transaction-id`` from the _initial_ *purchase* response in the ``parent-transaction-id`` field. Set ``sequence-type`` to ``recurring`` or ``final``.
 +
@@ -1321,16 +1272,7 @@ IMPORTANT: No amount due at sign-up.
 [#API_CC_3DS2_PaymentFlows_MITUCOF_StoringCard_AuthAndVoid]
 ==== Storing Card Credentials (Reserve and Void Amount) with Authentication
 
-[mermaid,API_CC_3DS2_PaymentFlows_MITUCOF_StoringCard_AuthAndVoid,svg]
-----
-graph LR
-A("1. check-enrollment (initial amount)")-->B
-B["2. ACS URL redirect"]-->C
-C("3. check-payer-response (optional)")-->D
-D("4. authorization (initial amount)")-->E
-E("5. void-authorization (optional)")
-class B squared-rect
-----
+image::images/API_CC_3DS2_PaymentFlows_MITUCOF_StoringCard_AuthAndVoid.svg[]
 
 . *Check-enrollment*: This is the initial request and initiates
 the payment session. New 3D Secure 2 fields can be found in
@@ -1585,11 +1527,7 @@ m| true
 [#API_CC_3DS2_PaymentFlows_MITUCOF_StoringCard_TwoStepMIT]
 ==== Option 2: Two-Step Merchant Initiated Transaction (MIT)
 
-[mermaid,API_CC_3DS2_PaymentFlows_MITUCOF_StoringCard_TwoStepMIT,svg]
-----
-graph LR
-A("1. authorization (UCOF amount)")-->B("2. capture-authorization (UCOF amount)")
-----
+image::images/API_CC_3DS2_PaymentFlows_MITUCOF_StoringCard_TwoStepMIT.svg[]
 
 . *Authorization*: The *authorization* in the transaction flow must reference the initial ``ucof`` transaction. Include the ``transaction-id`` from the _initial_ *authorization* response in the ``parent-transaction-id`` field. Set ``sequence-type`` to ``recurring`` or ``final``.
 +
