Update preview with merchant-documentation-gateway/cleanup

--- a/content/index/changelog/00-whats-new.adoc
+++ b/content/index/changelog/00-whats-new.adoc
@@ -5,6 +5,11 @@
 [discrete]
 === 2020-05
 
+.2020-05-19
+- <<API_PayPal_Fields, PayPal field table>> - Added field ``locale`` for REST API. 
+
+//-
+
 .2020-05-13
 - <<BatchProcessingApi_Files_Specifications, Batch Processing Files>> - Updated formatting details in csv files.
 
