--- a/content/index/payment-methods/paypal/rest/11-24-paypal.adoc
+++ b/content/index/payment-methods/paypal/rest/11-24-paypal.adoc
@@ -447,6 +447,8 @@ For the Payment Method _Paypal_, the following elements are mandatory (M), optio
 |processing-redirect-url |O |O |O |String |256 |The URL to which the consumer will be redirected after he has fulfilled his payment. This is normally a page on the merchant’s website.
 |cancel-redirect-url |O |O |O |String |256 |The URL to which the consumer will be re-directed after they canceled a payment. This is normally a page on the merchant’s Website.
 |success-redirect-url |O |O |O |String |256 |The URL to which the consumer will be re-directed after a successful payment. This is normally a success confirmation page on the merchant’s website.
+| locale | O | O | O | String | 2 | Code of the language in which {payment-gateway-abbr} renders the _PayPal_ page. +
+Format must be ``language`` (e.g. ``en``).
 |signature | | |M |complex | |The signature info, consisting of ``SignedInfo``, ``SignatureValue`` and ``KeyInfo``. For details see <<GeneralPlatformFeatures_IPN, IPN>>.
 |provider-transaction-reference-id |O |O |M |String |36 |Billing agreement ID from _PayPal_ returned in response (relevant for a recurring transaction).
 |risk-reference-id |O |O |O |String |32 |Additional field, which enables PayPal to better detect fraud on consumer-triggered recurring payments.
